basic_compiler/generated/BasicParser.py
# Generated from grammar/Basic.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BasicParser ( Parser ):

    grammarFileName = "Basic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'PRINT'", "'LET'", "'IF'", "'THEN'", 
                     "'ELSE'", "'END'", "'GOTO'", "'FOR'", "'TO'", "'STEP'", 
                     "'NEXT'", "'GOSUB'", "'RETURN'", "'WHILE'", "'WEND'", 
                     "'READ'", "'INPUT'", "'DIM'", "'DATA'", "'AND'", "'OR'", 
                     "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'('", "')'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "WS", "NEWLINE", "REM_COMMENT", "APOSTROPHE_COMMENT", 
                      "PRINT", "LET", "IF", "THEN", "ELSE", "END", "GOTO", 
                      "FOR", "TO", "STEP", "NEXT", "GOSUB", "RETURN", "WHILE", 
                      "WEND", "READ", "INPUT", "DIM", "DATA", "AND", "OR", 
                      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", 
                      "MUL", "DIV", "LPAREN", "RPAREN", "COMMA", "SEMICOLON", 
                      "COLON", "ID", "NUMBER", "STRING", "TYPE_SUFFIX", 
                      "FUNC" ]

    RULE_program = 0
    RULE_line = 1
    RULE_labelDef = 2
    RULE_statement = 3
    RULE_printStmt = 4
    RULE_letStmt = 5
    RULE_gotoStmt = 6
    RULE_forStmt = 7
    RULE_nextStmt = 8
    RULE_gosubStmt = 9
    RULE_returnStmt = 10
    RULE_readStmt = 11
    RULE_inputStmt = 12
    RULE_dimStmt = 13
    RULE_dataStmt = 14
    RULE_endStmt = 15
    RULE_ifStmt = 16
    RULE_whileStmt = 17
    RULE_varRefList = 18
    RULE_varRef = 19
    RULE_exprList = 20
    RULE_expression = 21
    RULE_logicalExpr = 22
    RULE_relationalExpr = 23
    RULE_additiveExpr = 24
    RULE_multiplicativeExpr = 25
    RULE_unaryExpr = 26
    RULE_atom = 27
    RULE_arrayRef = 28
    RULE_funcCall = 29
    RULE_compOp = 30
    RULE_variable = 31

    ruleNames =  [ "program", "line", "labelDef", "statement", "printStmt", 
                   "letStmt", "gotoStmt", "forStmt", "nextStmt", "gosubStmt", 
                   "returnStmt", "readStmt", "inputStmt", "dimStmt", "dataStmt", 
                   "endStmt", "ifStmt", "whileStmt", "varRefList", "varRef", 
                   "exprList", "expression", "logicalExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExpr", "atom", 
                   "arrayRef", "funcCall", "compOp", "variable" ]

    EOF = Token.EOF
    WS=1
    NEWLINE=2
    REM_COMMENT=3
    APOSTROPHE_COMMENT=4
    PRINT=5
    LET=6
    IF=7
    THEN=8
    ELSE=9
    END=10
    GOTO=11
    FOR=12
    TO=13
    STEP=14
    NEXT=15
    GOSUB=16
    RETURN=17
    WHILE=18
    WEND=19
    READ=20
    INPUT=21
    DIM=22
    DATA=23
    AND=24
    OR=25
    EQ=26
    NEQ=27
    LT=28
    LTE=29
    GT=30
    GTE=31
    PLUS=32
    MINUS=33
    MUL=34
    DIV=35
    LPAREN=36
    RPAREN=37
    COMMA=38
    SEMICOLON=39
    COLON=40
    ID=41
    NUMBER=42
    STRING=43
    TYPE_SUFFIX=44
    FUNC=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasicParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.LineContext)
            else:
                return self.getTypedRuleContext(BasicParser.LineContext,i)


        def getRuleIndex(self):
            return BasicParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BasicParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasicParser.NEWLINE) | (1 << BasicParser.PRINT) | (1 << BasicParser.LET) | (1 << BasicParser.IF) | (1 << BasicParser.END) | (1 << BasicParser.GOTO) | (1 << BasicParser.FOR) | (1 << BasicParser.NEXT) | (1 << BasicParser.GOSUB) | (1 << BasicParser.RETURN) | (1 << BasicParser.WHILE) | (1 << BasicParser.READ) | (1 << BasicParser.INPUT) | (1 << BasicParser.DIM) | (1 << BasicParser.DATA) | (1 << BasicParser.ID) | (1 << BasicParser.NUMBER))) != 0):
                self.state = 64
                self.line()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(BasicParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(BasicParser.NEWLINE, 0)

        def labelDef(self):
            return self.getTypedRuleContext(BasicParser.LabelDefContext,0)


        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def statement(self):
            return self.getTypedRuleContext(BasicParser.StatementContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = BasicParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 72
                self.labelDef()
                pass

            elif la_ == 2:
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BasicParser.NUMBER:
                    self.state = 73
                    self.match(BasicParser.NUMBER)


                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasicParser.PRINT) | (1 << BasicParser.LET) | (1 << BasicParser.IF) | (1 << BasicParser.END) | (1 << BasicParser.GOTO) | (1 << BasicParser.FOR) | (1 << BasicParser.NEXT) | (1 << BasicParser.GOSUB) | (1 << BasicParser.RETURN) | (1 << BasicParser.WHILE) | (1 << BasicParser.READ) | (1 << BasicParser.INPUT) | (1 << BasicParser.DIM) | (1 << BasicParser.DATA))) != 0):
                    self.state = 76
                    self.statement()


                pass


            self.state = 81
            self.match(BasicParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(BasicParser.COLON, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_labelDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabelDef" ):
                listener.enterLabelDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabelDef" ):
                listener.exitLabelDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelDef" ):
                return visitor.visitLabelDef(self)
            else:
                return visitor.visitChildren(self)




    def labelDef(self):

        localctx = BasicParser.LabelDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_labelDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==BasicParser.ID or _la==BasicParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 84
            self.match(BasicParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printStmt(self):
            return self.getTypedRuleContext(BasicParser.PrintStmtContext,0)


        def letStmt(self):
            return self.getTypedRuleContext(BasicParser.LetStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(BasicParser.IfStmtContext,0)


        def gotoStmt(self):
            return self.getTypedRuleContext(BasicParser.GotoStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(BasicParser.ForStmtContext,0)


        def nextStmt(self):
            return self.getTypedRuleContext(BasicParser.NextStmtContext,0)


        def gosubStmt(self):
            return self.getTypedRuleContext(BasicParser.GosubStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(BasicParser.ReturnStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(BasicParser.WhileStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(BasicParser.ReadStmtContext,0)


        def inputStmt(self):
            return self.getTypedRuleContext(BasicParser.InputStmtContext,0)


        def dimStmt(self):
            return self.getTypedRuleContext(BasicParser.DimStmtContext,0)


        def dataStmt(self):
            return self.getTypedRuleContext(BasicParser.DataStmtContext,0)


        def endStmt(self):
            return self.getTypedRuleContext(BasicParser.EndStmtContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BasicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BasicParser.PRINT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.printStmt()
                pass
            elif token in [BasicParser.LET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.letStmt()
                pass
            elif token in [BasicParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.ifStmt()
                pass
            elif token in [BasicParser.GOTO]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.gotoStmt()
                pass
            elif token in [BasicParser.FOR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.forStmt()
                pass
            elif token in [BasicParser.NEXT]:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.nextStmt()
                pass
            elif token in [BasicParser.GOSUB]:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.gosubStmt()
                pass
            elif token in [BasicParser.RETURN]:
                self.enterOuterAlt(localctx, 8)
                self.state = 93
                self.returnStmt()
                pass
            elif token in [BasicParser.WHILE]:
                self.enterOuterAlt(localctx, 9)
                self.state = 94
                self.whileStmt()
                pass
            elif token in [BasicParser.READ]:
                self.enterOuterAlt(localctx, 10)
                self.state = 95
                self.readStmt()
                pass
            elif token in [BasicParser.INPUT]:
                self.enterOuterAlt(localctx, 11)
                self.state = 96
                self.inputStmt()
                pass
            elif token in [BasicParser.DIM]:
                self.enterOuterAlt(localctx, 12)
                self.state = 97
                self.dimStmt()
                pass
            elif token in [BasicParser.DATA]:
                self.enterOuterAlt(localctx, 13)
                self.state = 98
                self.dataStmt()
                pass
            elif token in [BasicParser.END]:
                self.enterOuterAlt(localctx, 14)
                self.state = 99
                self.endStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(BasicParser.PRINT, 0)

        def exprList(self):
            return self.getTypedRuleContext(BasicParser.ExprListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = BasicParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BasicParser.PRINT)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasicParser.PLUS) | (1 << BasicParser.MINUS) | (1 << BasicParser.LPAREN) | (1 << BasicParser.ID) | (1 << BasicParser.NUMBER) | (1 << BasicParser.STRING) | (1 << BasicParser.FUNC))) != 0):
                self.state = 103
                self.exprList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(BasicParser.LET, 0)

        def variable(self):
            return self.getTypedRuleContext(BasicParser.VariableContext,0)


        def EQ(self):
            return self.getToken(BasicParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(BasicParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_letStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStmt" ):
                listener.enterLetStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStmt" ):
                listener.exitLetStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStmt" ):
                return visitor.visitLetStmt(self)
            else:
                return visitor.visitChildren(self)




    def letStmt(self):

        localctx = BasicParser.LetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_letStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BasicParser.LET)
            self.state = 107
            self.variable()
            self.state = 108
            self.match(BasicParser.EQ)
            self.state = 109
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(BasicParser.GOTO, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_gotoStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotoStmt" ):
                listener.enterGotoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotoStmt" ):
                listener.exitGotoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotoStmt" ):
                return visitor.visitGotoStmt(self)
            else:
                return visitor.visitChildren(self)




    def gotoStmt(self):

        localctx = BasicParser.GotoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_gotoStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(BasicParser.GOTO)
            self.state = 112
            _la = self._input.LA(1)
            if not(_la==BasicParser.ID or _la==BasicParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(BasicParser.FOR, 0)

        def variable(self):
            return self.getTypedRuleContext(BasicParser.VariableContext,0)


        def EQ(self):
            return self.getToken(BasicParser.EQ, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BasicParser.ExpressionContext,i)


        def TO(self):
            return self.getToken(BasicParser.TO, 0)

        def STEP(self):
            return self.getToken(BasicParser.STEP, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = BasicParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(BasicParser.FOR)
            self.state = 115
            self.variable()
            self.state = 116
            self.match(BasicParser.EQ)
            self.state = 117
            self.expression()
            self.state = 118
            self.match(BasicParser.TO)
            self.state = 119
            self.expression()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BasicParser.STEP:
                self.state = 120
                self.match(BasicParser.STEP)
                self.state = 121
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NextStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEXT(self):
            return self.getToken(BasicParser.NEXT, 0)

        def varRefList(self):
            return self.getTypedRuleContext(BasicParser.VarRefListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_nextStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNextStmt" ):
                listener.enterNextStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNextStmt" ):
                listener.exitNextStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNextStmt" ):
                return visitor.visitNextStmt(self)
            else:
                return visitor.visitChildren(self)




    def nextStmt(self):

        localctx = BasicParser.NextStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nextStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(BasicParser.NEXT)
            self.state = 125
            self.varRefList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GosubStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOSUB(self):
            return self.getToken(BasicParser.GOSUB, 0)

        def ID(self):
            return self.getToken(BasicParser.ID, 0)

        def NUMBER(self):
            return self.getToken(BasicParser.NUMBER, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_gosubStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGosubStmt" ):
                listener.enterGosubStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGosubStmt" ):
                listener.exitGosubStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGosubStmt" ):
                return visitor.visitGosubStmt(self)
            else:
                return visitor.visitChildren(self)




    def gosubStmt(self):

        localctx = BasicParser.GosubStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_gosubStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(BasicParser.GOSUB)
            self.state = 128
            _la = self._input.LA(1)
            if not(_la==BasicParser.ID or _la==BasicParser.NUMBER):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BasicParser.RETURN, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = BasicParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(BasicParser.RETURN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(BasicParser.READ, 0)

        def varRefList(self):
            return self.getTypedRuleContext(BasicParser.VarRefListContext,0)


        def getRuleIndex(self):
            return BasicParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = BasicParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(BasicParser.READ)
            self.state = 133
            self.varRefList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(BasicParser.INPUT, 0)

        def varRefList(self):
            return self.getTypedRuleContext(BasicParser.VarRefListContext,0)


        def STRING(self):
            return self.getToken(BasicParser.STRING, 0)

        def COMMA(self):
            return self.getToken(BasicParser.COMMA, 0)

        def getRuleIndex(self):
            return BasicParser.RULE_inputStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStmt" ):
                listener.enterInputStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStmt" ):
                listener.exitInputStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStmt" ):
                return visitor.visitInputStmt(self)
            else:
                return visitor.visitChildren(self)




    def inputStmt(self):
